--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,49 @@
-# Dependencias
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
 # Archivos del sistema
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# Editores
+.vscode/
+.idea/
 *.swp
 *.swo
 *~
 
-# IDEs
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-
-# Build y dist
-dist/
-build/
-*.min.js
-*.min.css
-
 # Logs
-logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependencias (si en el futuro se agregan)
+node_modules/
+bower_components/
 
 # Archivos temporales
-tmp/
-temp/
-.cache/
+*.tmp
+*.temp
 
-# Variables de entorno
-.env
-.env.local
-.env.production
-
-# Backup
+# Archivos de backup
 *.bak
 *.backup
 
-# Carpetas personales (opcional)
-personal/
-private/
+# Archivos de configuración local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Archivos de build (si en el futuro se agregan)
+dist/
+build/
+.cache/
+
+# Archivos de testing (si en el futuro se agregan)
+coverage/
+.nyc_output/
